reddit ui + functionalities done

--- a/src/Components/Giphy/giphyContent.css
+++ b/src/Components/Giphy/giphyContent.css
@@ -1,4 +1,4 @@
 .animated:hover {
+  border: 3px solid rgba(139, 92, 246, 1);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(139, 92, 246, 1);
-  transition: 0.5s ease;
 }
